--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=4001
-MongoDBURI="mongodb://localhost:27017/restaurant"
+MongoDBURI="mongodb+srv://adityachandra419:aditya1234@cluster0.uuurqk0.mongodb.net/"
