--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=4001
-MongoDBURI="mongodb+srv://adityachandra419:aditya1234@cluster0.uuurqk0.mongodb.net/"
+MONGODB_URI="mongodb+srv://adityachandra419:aditya1234@restaurentdb.4fg1f.mongodb.net/?retryWrites=true&w=majority&appName=restaurentdb"
