--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "axios": "^1.7.2",
+    "framer-motion": "^12.6.2",
     "lottie-react": "^2.4.0",
+    "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
