--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.6.2",
     "lottie-react": "^2.4.0",
     "nodemon": "^3.1.9",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
